<resources>
    <string name="app_name">DiscloStore</string>
    <string name="catalog">Stores Catalog</string>
    <string name="blacksmith">Blacksmiths</string>
    <string name="mechanic">Mechanics</string>
    <string name="electrical">Electrical</string>
    <string name="carpenter">Carpenters</string>
    <string name="barber">Barbers</string>
    <string name="electronics">Electronics</string>
    <string name="flowers">Flowers</string>
    <string name="toys">Toys</string>
    <string name="optics">Optics</string>
    <string name="jewel">Jewels</string>
    <string name="book">Books</string>
    <string name="shoes">Shoes</string>
    <string name="clothes">Clothes</string>
    <string name="img">image</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginnow">Login Now</string>
    <string name="signup">Signup Now</string>
    <string name="forget">Forgot Password?</string>
    <string name="spinner_title">spinner_title</string>
    <string name="uploadImages">Set your image</string>
    <string name="action_pic">Pictures</string>
    <string name="title_activity_store__location">Map</string>
    <string name="title_activity_get_store_loc">Map</string>

</resources>

